--- a/homepage.html
+++ b/homepage.html
@@ -372,6 +372,18 @@
                     </div>
                 </div>
             </div>
+             <div class="col d-flex align-items-start reveal">
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em" aria-hidden="true">
+                            <use xlink:href="#cpu-fill"></use>
+                        </svg>
+                    <div>
+                        <ul>
+                            <li class="list">JQuery</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
             <!-- Repeat similar structure for other list items -->
 
