--- a/homepage.html
+++ b/homepage.html
@@ -341,13 +341,13 @@
                 <div class="col">
                     <div class="card card-cover h-100 text-bg-dark rounded-4" style="background-image: url('./static/Screenshot\ 2025-05-03\ 115828.jpg');">
                         <div class="d-flex flex-column h-100 p-5 pb-3">
-                            <a href="https://github.com/Parth520/Aluminiconn">
+                            <a href="https://github.com/Parth520/Blog-maker">
                                 <h3 class="pt-5 mt-5 mb-4 display-6 fw-bold">Blog Creator</h3>
                             </a>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto"> Website for creating your own Blog without coding</li>
                                 <li class="d-flex align-items-center me-3"><small>role:Full-Stack developer</small></li>
-                                <li class="d-flex align-items-center"><small>5d</small></li>
+                                <li class="d-flex align-items-center"><small>2d</small></li>
                             </ul>
                         </div>
                         <div class="floating-label">Click to view </div>
